# rolo

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  bun.lockb  compose.yaml  package.json  tailwind.config.js
api/: Cargo.toml
api/src/: lib.rs
entity/src/: lib.rs
entity/src/entities/: contact.rs  contact_interaction.rs  contact_interactions.rs  contacts.rs  interaction.rs  interactions.rs  interval.rs  intervals.rs  mod.rs  prelude.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_init.rs  main.rs
src/: consts.rs  main.rs
storage/: Cargo.toml
storage/src/: import.rs  lib.rs
storage/tests/: test_contacts.rs
