[package]
name = "rolo"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Young"]

[workspace]
members = [
  # Entrypoint
  ".",
  # Axum server
  "api",
  # Database functions
  "storage",
  # ORM Entities
  "entity",
  # ORM Migrations
  "migration",
]

[workspace.dependencies]
tokio = { version = "1.35.0", features = ["full"] }
sea-orm = { version = "0.12.10", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "with-time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
api = { path = "./api" }
